--- a/components/_benefit.scss
+++ b/components/_benefit.scss
@@ -1,11 +1,16 @@
 .benefit {
     text-align: center;
+   
+    @include phones{
+        display: flex;
+        text-align: left;
+    }
 }
 
 .benefit__image-wrapper {
     display: inline-block;
-    width: 128px;
-    height: 128px;
+    width: rem(128px);
+    height: rem(128px);
     position: relative;
     background: #F2F5F4;
     border-radius: 50%;
@@ -13,8 +18,8 @@
 }
 
 .benefit__icon{
-    width: 68px;
-    height: 68px;
+    width: rem(68px);
+    height: rem(68px);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -25,4 +30,16 @@
 .benefit__title{
     color: black;
     font-weight: bold;
+
+}
+
+.benefits {
+    text-align: center;
+}
+
+.benefit__image{
+@include phones {
+    margin-bottom: 0;
+    margin-right: rem(20px);
+}
 }
