--- a/components/_benefits.scss
+++ b/components/_benefits.scss
@@ -1,5 +1,8 @@
 .benefits {
     display: flex;
+    @include phones{
+        flex-direction: column;
+    }
 }
 
 .benefits__item {
@@ -7,14 +10,26 @@
     padding: 0 3%;
     position: relative;
 
+    @include phones {
+        padding: 0;
+        margin-bottom: rem (19px);
+    }
+
     &:before{
         content: url(../foto/Shape\ sp-2203-0.png);
         position: absolute;
-        top: 60px;
+        top: rem(60px);
         right: 0;
         transform: translateX(50%);
-
-    }
+        @include tablets{
+            display: none;
+        }
+        @include phones{
+            display: none;
+        }
+    
+    
+  
 
     &:first-child {
         padding-left: 0;
@@ -27,4 +42,5 @@
             display: none;            
         }
     }
+}
 }
