--- a/components/_headline.scss
+++ b/components/_headline.scss
@@ -2,10 +2,14 @@
     text-align: center;
 }
 .headline__title {
-    margin-bottom: 17px;
+    margin-bottom: rem(17px);
 }
 
 .headline__subtitle {
     padding: 0 26%;
-    margin-bottom: 49px;
+    margin-bottom: rem(49px);
+
+    @include phones {
+        padding: 0 5%;
+    }
 }
