--- a/stayl/layout.scss
+++ b/stayl/layout.scss
@@ -1,10 +1,21 @@
+html {
+    font-size: $baseFontSize;
+
+    @include tablets {
+        font-size: $baseFontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $baseFontSize - 2px;
+    }
+}
+
 html,
 body {
     height: 100%;
 }
 
 body {
-    font-size: $baseFontSize;
     font-family: "Alegreya Sans", Arial, Helvetica, sans-serif;
     line-height: 1.42;
     color: #666;
@@ -13,14 +24,14 @@ body {
 .wrapper {
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 0px;
     min-height: 100%;
     overflow: hidden;
 }
 
 .container {
-    width: $containerWidth +0px;
-    margin: auto;
+    width: 95%;
+    max-width: $containerWidth;
+    margin: 0 auto;
     position: relative;
 }
 
