--- a/stayl/main.css
+++ b/stayl/main.css
@@ -1,12 +1,55 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,300&display=swap");
+.hamburger {
+  width: 24px;
+  height: 20px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.hamburger__plank {
+  display: block;
+  background: #fff;
+  height: 4px;
+  border-radius: 10px;
+}
+
+html {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
-  font-size: 18px;
   font-family: "Alegreya Sans", Arial, Helvetica, sans-serif;
   line-height: 1.42;
   color: #666;
@@ -15,14 +58,14 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 940px;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
-  width: 940px;
-  margin: auto;
+  width: 95%;
+  max-width: 940px;
+  margin: 0 auto;
   position: relative;
 }
 
@@ -74,29 +117,73 @@ img {
 
 .hero {
   background: url(../foto/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png) no-repeat;
-  -webkit-filter: drop-shadow(2px 4px 6px black);
-          filter: drop-shadow(2px 4px 6px black);
+  -webkit-filter: drop-shadow(0.1111111111rem 0.2222222222rem 0.3333333333rem black);
+          filter: drop-shadow(0.1111111111rem 0.2222222222rem 0.3333333333rem black);
   background-size: cover;
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   color: #FFFFFF;
   position: relative;
+}
+@media screen and (max-width: 768px) {
+  .hero {
+    background-position: 85% 0%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero {
+    background-position: 75% 0%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero:before, .hero:after {
+    display: none;
+  }
 }
 .hero:before {
   content: url("../foto/crug.png");
   position: absolute;
-  bottom: -18px;
+  bottom: -1rem;
   right: 2%;
 }
 .hero:after {
   content: url("../foto/crug.png");
   position: absolute;
-  bottom: -18px;
+  bottom: -1rem;
   right: 2%;
 }
 
 .hero__title-section {
   width: 43%;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-section {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .hero__title-section:before {
+    content: "";
+    width: 703 px/18px0rem;
+    height: 709 px/18px0rem;
+    background: url(/foto/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png) center center/contain no-repeat;
+    margin-bottom: rem 16px;
+  }
 }
 
 .hero__container {
@@ -111,56 +198,52 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100%;
-  padding: 24px 0 45px 0;
+  padding: 1.3333333333rem 0 2.5rem 0;
+}
+@media screen and (max-width: 768px) {
+  .hero__container {
+    background: none;
+  }
 }
 
 .hero__main-title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   line-height: 1.3;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 0.8333333333rem;
   text-transform: uppercase;
+}
+@media screen and (max-width: 480px) {
+  .hero__main-title {
+    font-size: 40px;
+  }
 }
 
 .hero__title-desc {
-  font-size: 21px;
-  margin-bottom: 28px;
+  font-size: 1.1666666667rem;
+  margin-bottom: 1.5555555556rem;
+}
+
+@media screen and (max-width: 768px) {
+  .hero__icons-section {
+    display: none;
+  }
 }
 
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.menu__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu__item {
-  margin-right: 18px;
-}
-.menu__item:last-child {
-  margin-right: 0;
-}
-
-.menu__link {
-  text-decoration: none;
-}
-
 .phone-number {
-  font-size: 24px;
+  font-size: 1.3333333333rem;
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -171,9 +254,61 @@ img {
 }
 
 .phone-number__icon-elem {
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
+  width: 0.6666666667rem;
+  height: 0.6666666667rem;
+  margin-right: 0.3333333333rem;
+}
+
+@media screen and (max-width: 768px) {
+  .phone-number.header__phone-number {
+    display: none;
+  }
+}
+
+.phone-number__text {
+  white-space: nowrap;
+}
+
+.phone-number__icon {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.menu {
+  padding-top: 5px;
+  margin: 0 30px;
+}
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu__item {
+  margin-bottom: 10px;
+  margin-right: 1.5rem;
+}
+.menu__item:last-child {
+  margin-right: 0;
+}
+
+.menu__link {
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .features {
@@ -183,10 +318,151 @@ img {
 }
 
 .features__item {
-  margin-right: 46px;
+  margin-right: 2.5555555556rem;
 }
 .features__item:last-child {
   margin-right: 0;
+}
+
+.leaf__icon__serf {
+  width: 10px;
+  height: 10px;
+  padding: 10px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.leaf__icon__serf:after {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -10px -10px;
+}
+
+.leaf__icon__serf:hover:after {
+  opacity: 0;
+}
+
+.leaf__icon__serf:hover:before {
+  opacity: 1;
+}
+
+.leaf__icon__serf:before {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -71px -71px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.leaf__icon__saw {
+  width: 10px;
+  height: 10px;
+  padding: 10px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.leaf__icon__saw:after {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -71px -10px;
+}
+
+.leaf__icon__saw:hover:after {
+  opacity: 0;
+}
+
+.leaf__icon__saw:hover:before {
+  opacity: 1;
+}
+
+.leaf__icon__saw:before {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -10px -71px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.leaf__icon__car {
+  width: 10px;
+  height: 10px;
+  padding: 10px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.leaf__icon__car:after {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -132px -71px;
+}
+
+.leaf__icon__car:hover:after {
+  opacity: 0;
+}
+
+.leaf__icon__car:hover:before {
+  opacity: 1;
+}
+
+.leaf__icon__car:before {
+  content: "";
+  margin-right: 18px;
+  display: block;
+  position: absolute;
+  top: 72%;
+  left: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 41px;
+  height: 41px;
+  background: url(/foto/sprites.png) -132px -10px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .feature {
@@ -196,21 +472,21 @@ img {
 }
 
 .feature__icon {
-  width: 41px;
-  margin-right: 7px;
+  width: 2.2777777778rem;
+  margin-right: 0.3888888889rem;
 }
 
 .feature__text {
-  font-size: 16px;
-  max-width: 90px;
+  font-size: 0.8888888889rem;
+  max-width: 5rem;
 }
 
 .btn {
-  font-size: 19px;
+  font-size: 1.0555555556rem;
   font-weight: bold;
-  padding: 18px 35px;
+  padding: 1rem 1.9444444444rem;
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: 5.5555555556rem;
   line-height: 1;
   text-decoration: none;
   display: inline-block;
@@ -235,7 +511,7 @@ img {
 
 .section {
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -255,9 +531,9 @@ img {
 }
 
 .section__title {
-  font-size: 48px;
+  font-size: 2.6666666667rem;
   font-weight: bold;
-  margin-bottom: 60px;
+  margin-bottom: 3.3333333333rem;
   text-align: center;
   text-transform: uppercase;
   color: #000;
@@ -268,18 +544,31 @@ img {
 }
 
 .headline__title {
-  margin-bottom: 17px;
+  margin-bottom: 0.9444444444rem;
 }
 
 .headline__subtitle {
   padding: 0 26%;
-  margin-bottom: 49px;
+  margin-bottom: 2.7222222222rem;
+}
+@media screen and (max-width: 480px) {
+  .headline__subtitle {
+    padding: 0 5%;
+  }
 }
 
 .benefits {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 480px) {
+  .benefits {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .benefits__item {
@@ -289,32 +578,56 @@ img {
   padding: 0 3%;
   position: relative;
 }
+@media screen and (max-width: 480px) {
+  .benefits__item {
+    padding: 0;
+    margin-bottom: rem 19px;
+  }
+}
 .benefits__item:before {
   content: url(../foto/Shape\ sp-2203-0.png);
   position: absolute;
-  top: 60px;
+  top: 3.3333333333rem;
   right: 0;
   -webkit-transform: translateX(50%);
           transform: translateX(50%);
 }
-.benefits__item:first-child {
+@media screen and (max-width: 768px) {
+  .benefits__item:before {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .benefits__item:before {
+    display: none;
+  }
+}
+.benefits__item:before:first-child {
   padding-left: 0;
 }
-.benefits__item:last-child {
+.benefits__item:before:last-child {
   padding-right: 0;
 }
-.benefits__item:last-child:before {
+.benefits__item:before:last-child:before {
   display: none;
 }
 
 .benefit {
   text-align: center;
 }
+@media screen and (max-width: 480px) {
+  .benefit {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: left;
+  }
+}
 
 .benefit__image-wrapper {
   display: inline-block;
-  width: 128px;
-  height: 128px;
+  width: 7.1111111111rem;
+  height: 7.1111111111rem;
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
@@ -322,8 +635,8 @@ img {
 }
 
 .benefit__icon {
-  width: 68px;
-  height: 68px;
+  width: 3.7777777778rem;
+  height: 3.7777777778rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -336,31 +649,65 @@ img {
   font-weight: bold;
 }
 
+.benefits {
+  text-align: center;
+}
+
+@media screen and (max-width: 480px) {
+  .benefit__image {
+    margin-bottom: 0;
+    margin-right: 1.1111111111rem;
+  }
+}
+
 .benefits-section {
   position: relative;
 }
 .benefits-section::before {
   content: url(../foto/element.png);
   position: absolute;
-  bottom: -80px;
+  bottom: -4.4444444444rem;
   left: 0;
+}
+@media screen and (max-width: 480px) {
+  .benefits-section::before {
+    display: none;
+  }
 }
 
 .reviews__display-inner {
   background: #F8FAF9;
-  padding: 50px 45px 34px;
+  padding: 2.7777777778rem 2.5rem 1.8888888889rem;
 }
 
 .reviews__display-inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 15px;
+  margin-bottom: 0.8333333333rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .reviews__avatar {
-  width: 254px;
-  height: 264px;
+  width: 14.1111111111rem;
+  height: 14.6666666667rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 7.2222222222rem;
+    height: 7.2222222222rem;
+  }
 }
 
 .reviews__avatar-img {
@@ -369,35 +716,40 @@ img {
   width: 100%;
   height: 100%;
 }
+@media screen and (max-width: 768px) {
+  .reviews__avatar-img {
+    background: url(./foto/man\ avaters.png);
+  }
+}
 
 .reviews__content {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-left: 20px;
+  margin-left: 1.1111111111rem;
 }
 
 .reviews__title {
-  font-size: 30px;
+  font-size: 1.6666666667rem;
   font-weight: bold;
-  margin-bottom: 22px;
+  margin-bottom: 1.2222222222rem;
   color: black;
 }
 
 .reviews__text {
-  margin-bottom: 36px;
+  margin-bottom: 2rem;
 }
 
 .reviews__autor {
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: bold;
   color: black;
 }
 
 .interective-avatar {
-  width: 80px;
-  height: 80px;
-  border-color: 6px solid transparent;
+  width: 4.4444444444rem;
+  height: 4.4444444444rem;
+  border-color: 0.3333333333rem solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
@@ -436,7 +788,7 @@ img {
 }
 
 .reviews__swither-item {
-  margin-right: 6px;
+  margin-right: 0.3333333333rem;
 }
 .reviews__swither-item:last-child {
   margin-right: 0;
@@ -447,32 +799,51 @@ img {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    padding: 0 19%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form {
+    padding: 0;
+  }
+}
 
 .form__col {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__col:last-child {
   margin-right: 0;
+}
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
 }
 
 .form__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: 1rem;
 }
 .form__row:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0rem;
 }
 
 .form__block {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.1111111111rem;
 }
 .form__block:last-child {
   margin-right: 0;
@@ -482,11 +853,11 @@ img {
   border-radius: 5%;
   width: 100%;
   border: none;
-  padding: 18px 11px;
-  border: solid 3px transparent;
+  padding: 1rem 0.6111111111rem;
+  border: solid 0.1666666667rem transparent;
 }
 .form__input--textarea {
-  height: 174px;
+  height: 9.6666666667rem;
   resize: none;
 }
 .form__input:focus {
@@ -500,21 +871,41 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 25px;
-  margin-bottom: 44px;
+  margin-top: 1.3888888889rem;
+  margin-bottom: 2.4444444444rem;
+}
+@media screen and (max-width: 480px) {
+  .form__controls {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.form__btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .oreder-section {
   background: url(../foto/124f6c66-b452-4900-b76c-d4942f67647c.jpg) no-repeat;
-  -webkit-filter: drop-shadow(2px 4px 6px black);
-          filter: drop-shadow(2px 4px 6px black);
+  -webkit-filter: drop-shadow(0.1111111111rem 0.2222222222rem 0.3333333333rem black);
+          filter: drop-shadow(0.1111111111rem 0.2222222222rem 0.3333333333rem black);
   background-size: cover;
   height: 100vh;
-  min-height: 650px;
+  min-height: 36.1111111111rem;
   color: #FFFFFF;
   position: relative;
 }
-
+@media screen and (max-width: 768px) {
+  .oreder-section {
+    background-position: center;
+  }
+}
 .radio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -524,6 +915,11 @@ img {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+}
+@media screen and (max-width: 480px) {
+  .radio {
+    margin-bottom: rem 10px;
+  }
 }
 .radio--checkbox .radio__visible {
   border-radius: 0;
@@ -540,17 +936,17 @@ img {
 }
 
 .radio__visible {
-  margin-right: 6px;
-  width: 26px;
-  height: 26px;
+  margin-right: 0.3333333333rem;
+  width: 1.4444444444rem;
+  height: 1.4444444444rem;
   position: relative;
   border-radius: 50%;
   background: #fff;
 }
 .radio__visible:before {
   content: "";
-  width: 14px;
-  height: 14px;
+  width: 0.7777777778rem;
+  height: 0.7777777778rem;
   background: #FEDB3F;
   border-radius: 50%;
   position: absolute;
@@ -568,7 +964,7 @@ img {
 }
 
 .radio__title {
-  margin-right: 12px;
+  margin-right: 0.6666666667rem;
 }
 
 .fixed-menu {
@@ -577,30 +973,35 @@ img {
   right: 3%;
   z-index: 100;
 }
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
+}
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: 0.2777777778rem;
 }
 .fixed-menu__item:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0rem;
 }
 .fixed-menu__item--active .fixed-menu__link {
   border-color: #fff;
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
+  width: 0.8888888889rem;
+  height: 0.8888888889rem;
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.0555555556rem solid transparent;
   display: block;
   position: relative;
 }
 .fixed-menu__link:before {
   content: "";
   display: block;
-  width: 6px;
-  height: 6px;
+  width: 0.3333333333rem;
+  height: 0.3333333333rem;
   border-radius: 50%;
   background: #FFFFFF;
   position: absolute;
