--- a/components/_feature.scss
+++ b/components/_feature.scss
@@ -1,12 +1,14 @@
 .feature {
     display: flex;
 }
-.feature__icon {
-    width: 41px;
-    margin-right: 7px;
+.feature__icon{
+    width: rem(41px);
+    margin-right: rem(7px);
 }
 
+
+
 .feature__text {
-    font-size: 16px;
-    max-width: 90px;
+    font-size: rem(16px);
+    max-width: rem(90px);
 }
