--- a/components/_fixed-menu.scss
+++ b/components/_fixed-menu.scss
@@ -3,12 +3,15 @@
     top:20%;
     right: 3%;
     z-index: $z-fixed-menu;
+    @include tablets {
+        display: none;
+    }
 }
 
 .fixed-menu__item {
-    margin-bottom: 5px;
+    margin-bottom: rem(5px);
     &:last-child{
-        margin-bottom: 0px;
+        margin-bottom: rem(0px);
     }
 
     &--active {
@@ -19,18 +22,18 @@
 }
 
 .fixed-menu__link{
-    width: 16px;
-    height: 16px;
+    width: rem(16px);
+    height: rem(16px);
     border-radius: 50%;
-    border: 1px solid transparent;
+    border: rem(1px) solid transparent;
     display: block;
     position: relative;
     
     &:before {
         content: "";
         display: block;
-        width: 6px;
-        height: 6px;
+        width: rem(6px);
+        height: rem(6px);
         border-radius: 50%;
         background: #FFFFFF;
         position: absolute;
