--- a/components/_form.scss
+++ b/components/_form.scss
@@ -1,22 +1,33 @@
 .form {
     display: flex;
     
+    @include tablets {
+    padding: 0 19%;
+    flex-direction: column;
+}
+    @include phones {
+        padding: 0;
+    }
+
 }
 
 .form__col {
   
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
     &:last-child {
+        margin-right: 0;
+    }
+    @include tablets {
         margin-right: 0;
     }
 }
 
 .form__row {
     display: flex;
-    margin-bottom: 18px;
+    margin-bottom: rem(18px);
     &:last-child {
-        margin-bottom: 0px;
+        margin-bottom: rem(0px);
     }
 
 }
@@ -24,22 +35,24 @@
 .form__block {
 
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
     &:last-child {
         margin-right: 0;
     }
+
+
 }
 
 .form__input {
     border-radius: 5%;
     width: 100%;
     border: none;
-    padding: 18px 11px;
-    //border: solid 3px #FEDB3F;
-    border: solid 3px transparent;
+    padding: rem(18px) rem(11px);
+    //border: solid rem(3px) #FEDB3F;
+    border: solid rem(3px) transparent;
 
     &--textarea {
-        height: 174px;
+        height: rem(174px);
         resize: none;
     }
     &:focus {
@@ -52,9 +65,17 @@
 .form__controls {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 25px;
-    margin-bottom: 44px;
-}
+    margin-top: rem(25px);
+    margin-bottom: rem(44px);
+    
+    @include phones {
+        justify-content: center;
+    }
+    }
 
+.form__btns {
+    display: flex;
+    justify-content: center;
+}
 
 
