--- a/components/_header.scss
+++ b/components/_header.scss
@@ -1,34 +1,33 @@
 .header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+    
 }
 
-.menu__list {
-    display: flex;
-    align-items: center;
-}
-
-.menu__item {
-margin-right: 18px;
-
-&:last-child {
-    margin-right: 0;
-}
-}
-.menu__link {
-    text-decoration: none;
-}
 
 .phone-number {
-    font-size: 24px;
+    font-size: rem(24px);
     text-decoration: none;
     display: flex;
     align-items: center;
 }
 
 .phone-number__icon-elem {
-    width: 12px;
-    height: 12px;
-    margin-right: 6px;
+    width: rem(12px);
+    height: rem(12px);
+    margin-right: rem(6px);
 }
+
+.phone-number.header__phone-number{
+    @include tablets{
+        display: none;
+    }
+ }
+
+ .phone-number__text {
+    white-space: nowrap;
+ }
+ .phone-number__icon{
+    flex-shrink: 0;
+ }
