--- a/components/_hero.scss
+++ b/components/_hero.scss
@@ -1,48 +1,96 @@
 .hero { 
     background: url(../foto/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png) no-repeat;
-    filter: drop-shadow(2px 4px 6px black);
+    filter: drop-shadow(rem(2px) rem(4px) rem(6px) black);
     background-size: cover;
     height: 100vh;
-    min-height: 650px;
+    min-height: rem(650px);
     color:#FFFFFF;
     position: relative;
+    @include tablets {
+        background-position: 85% 0%;
+         
+    } 
+    @include phones {
+        background-position: 75% 0%;;
+        
+    }
+
+    &:before, &:after {
+        @include tablets {
+            display: none;
+        }
+    }
 
     &:before {
         content: url("../foto/crug.png");
         position: absolute;
-        bottom: -18px;
+        bottom: rem(-18px);
         right: 2%;
     }
 
     &:after {
         content: url("../foto/crug.png");
         position: absolute;
-        bottom: -18px;
+        bottom: rem(-18px);
         right: 2%;
     }
-
 }
 
 .hero__title-section {
     width: 43%;
+    @include tablets {
+        width: 100%;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        &:before{
+            content: "";
+            width: rem(703 px);
+            height: rem(709 px);
+            background: url(/foto/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png) center center / contain no-repeat ;
+            margin-bottom: rem (16px);
+        }
+    }
+        
+
 }
 .hero__container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    padding: 24px 0 45px 0;
+    padding: rem(24px) 0 rem(45px) 0;
+
+    @include tablets {
+        background: none;
+    }
 }
 
 .hero__main-title {
-    font-size: 48px;
+    font-size: rem(48px);
     line-height: 1.3;
     font-weight: bold;
-    margin-bottom: 15px;
+    margin-bottom: rem(15px);
     text-transform: uppercase;
+    @include phones {
+        font-size: 40px;
+    }
 }
 
+
 .hero__title-desc {
-    font-size: 21px;
-    margin-bottom: 28px;
+    font-size: rem(21px);
+    margin-bottom: rem(28px);
+    
 }
+
+.hero__icons-section {
+    @include tablets {
+        display: none;
+    }
+   } 
+  
