--- a/components/_radio.scss
+++ b/components/_radio.scss
@@ -2,6 +2,10 @@
     display: flex;
     cursor: pointer;
     user-select: none;
+    
+    @include phones {
+        margin-bottom: rem (10px);
+    }
 
     &--checkbox {
         .radio__visible {
@@ -25,17 +29,17 @@
 }
 
 .radio__visible {
-    margin-right: 6px;
-    width: 26px;
-    height: 26px;
+    margin-right: rem(6px);
+    width: rem(26px);
+    height: rem(26px);
     position: relative;
     border-radius: 50%;
     background: #fff;
 
     &:before {
         content: "";
-        width: 14px;
-        height: 14px;
+        width: rem(14px);
+        height: rem(14px);
         background: #FEDB3F;
         border-radius: 50%;
         position: absolute;
@@ -50,6 +54,6 @@
 }
 
 .radio__title{    
-    margin-right: 12px;
+    margin-right: rem(12px);
    
 }
