--- a/components/_features.scss
+++ b/components/_features.scss
@@ -29,7 +29,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png)  -10px -10px;;
+    background: url(../foto/sprites.png)  -10px -10px;;
 
 }
 
@@ -51,7 +51,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png) -71px -71px;;
+    background: url(../foto/sprites.png) -71px -71px;;
     opacity: 0;
     transition: .3s;
 }
@@ -77,7 +77,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png)  -71px -10px;
+    background: url(../foto/sprites.png)  -71px -10px;
 
 }
 
@@ -99,7 +99,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png) -10px -71px;
+    background: url(../foto/sprites.png) -10px -71px;
     opacity: 0;
     transition: .3s;
 }
@@ -123,7 +123,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png)  -132px -71px;
+    background: url(../foto/sprites.png)  -132px -71px;
 
 }
 
@@ -145,7 +145,7 @@
     transform: translate(-50%, -50%);
     width: 41px; 
     height: 41px;
-    background: url(/foto/sprites.png) -132px -10px;
+    background: url(../foto/sprites.png) -132px -10px;
     opacity: 0;
     transition: .3s;
 }
