--- a/components/_section.scss
+++ b/components/_section.scss
@@ -4,6 +4,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @include tablets {
+        font-size: 20px;
+    }
+    @include phones {
+        font-size: 16px;
+    }
+
 
 
 &--font-color--wait {
@@ -24,4 +31,11 @@
     text-align: center;
     text-transform: uppercase;
     color: #000;
+}
+
+.header { 
+    height: rem(100px);
+    background: #1968B1;
+    align-items: center;
+    padding: 0 5%;
 }
