--- a/stayl/main.css
+++ b/stayl/main.css
@@ -187,6 +187,8 @@ img {
 }
 
 .hero__container {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -194,10 +196,7 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 100%;
+  height: 115%;
   padding: 1.3333333333rem 0 2.5rem 0;
 }
 @media screen and (max-width: 768px) {
@@ -523,6 +522,16 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .section {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section {
+    font-size: 16px;
+  }
+}
 .section--font-color--wait {
   color: #FFFFFF;
 }
@@ -537,6 +546,15 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: #000;
+}
+
+.header {
+  height: 5.5555555556rem;
+  background: #1968B1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 5%;
 }
 
 .headline {
