--- a/components/_section.scss
+++ b/components/_section.scss
@@ -33,9 +33,8 @@
     color: #000;
 }
 
-.header { 
-    height: rem(100px);
-    background: #1968B1;
-    align-items: center;
-    padding: 0 5%;
-}
+//.header { 
+   // height: rem(100px);
+    //background: #1968B1;
+    //align-items: center;
+//}
