--- a/components/_header.scss
+++ b/components/_header.scss
@@ -1,8 +1,14 @@
 .header {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
-    
+   // justify-content: space-between;
+    justify-content: center;
+    padding: 1.5%; // пришлось добавить
+    align-items: center;// пришлось добавить
+    @include tablets{
+        justify-content: space-between;
+        background-color: aqua;
+    }
 }
 
 
