--- a/components/_header.scss
+++ b/components/_header.scss
@@ -7,7 +7,7 @@
     align-items: center;// пришлось добавить
     @include tablets{
         justify-content: space-between;
-        background-color: aqua;
+        background-color: #1968B1;
     }
 }
 
