--- a/stayl/layout.scss
+++ b/stayl/layout.scss
@@ -29,6 +29,7 @@ body {
 }
 
 .container {
+    //max-height: $containerHeight;
     width: 95%;
     max-width: $containerWidth;
     margin: 0 auto;
