--- a/stayl/main.css
+++ b/stayl/main.css
@@ -1,8 +1,9 @@
+@charset "UTF-8";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,300&display=swap");
 .hamburger {
-  width: 24px;
-  height: 20px;
+  width: 1.3333333333rem;
+  height: 1.1111111111rem;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -26,8 +27,8 @@
 .hamburger__plank {
   display: block;
   background: #fff;
-  height: 4px;
-  border-radius: 10px;
+  height: rem 4px;
+  border-radius: rem 10px;
 }
 
 html {
@@ -196,8 +197,8 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
-  padding: 1.3333333333rem 0 2.5rem 0;
+  height: 86%;
+  padding: 7.333333rem 0 2.5rem 0;
 }
 @media screen and (max-width: 768px) {
   .hero__container {
@@ -214,7 +215,7 @@ img {
 }
 @media screen and (max-width: 480px) {
   .hero__main-title {
-    font-size: 40px;
+    font-size: rem 40px;
   }
 }
 
@@ -249,7 +250,7 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    background-color: aqua;
+    background-color: #1968B1;
   }
 }
 
@@ -286,8 +287,8 @@ img {
 }
 
 .menu {
-  padding-top: 5px;
-  margin: 0 30px;
+  padding-top: rem 5px;
+  margin: 0 rem 30px;
 }
 @media screen and (max-width: 768px) {
   .menu {
@@ -307,10 +308,11 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 0px 46px;
 }
 
 .menu__item {
-  margin-bottom: 10px;
+  margin-bottom: rem 10px;
   margin-right: 1.5rem;
 }
 .menu__item:last-child {
@@ -336,25 +338,25 @@ img {
 }
 
 .leaf__icon__serf {
-  width: 10px;
-  height: 10px;
-  padding: 10px;
+  width: 0.5555555556rem;
+  height: 0.5555555556rem;
+  padding: 0.5555555556rem;
   border-radius: 50%;
   position: relative;
 }
 
 .leaf__icon__serf:after {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -10px -10px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -0.5555555556rem -0.5555555556rem;
 }
 
 .leaf__icon__serf:hover:after {
@@ -367,41 +369,41 @@ img {
 
 .leaf__icon__serf:before {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -71px -71px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -3.9444444444rem -3.9444444444rem;
   opacity: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .leaf__icon__saw {
-  width: 10px;
-  height: 10px;
-  padding: 10px;
+  width: 0.5555555556rem;
+  height: 0.5555555556rem;
+  padding: 0.5555555556rem;
   border-radius: 50%;
   position: relative;
 }
 
 .leaf__icon__saw:after {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -71px -10px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -3.9444444444rem -0.5555555556rem;
 }
 
 .leaf__icon__saw:hover:after {
@@ -414,41 +416,41 @@ img {
 
 .leaf__icon__saw:before {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -10px -71px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -0.5555555556rem -3.9444444444rem;
   opacity: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .leaf__icon__car {
-  width: 10px;
-  height: 10px;
-  padding: 10px;
+  width: 0.5555555556rem;
+  height: 0.5555555556rem;
+  padding: 0.5555555556rem;
   border-radius: 50%;
   position: relative;
 }
 
 .leaf__icon__car:after {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -132px -71px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -7.3333333333rem -3.9444444444rem;
 }
 
 .leaf__icon__car:hover:after {
@@ -461,16 +463,16 @@ img {
 
 .leaf__icon__car:before {
   content: "";
-  margin-right: 18px;
+  margin-right: 1rem;
   display: block;
   position: absolute;
   top: 72%;
   left: 100%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 41px;
-  height: 41px;
-  background: url(../foto/sprites.png) -132px -10px;
+  width: 2.2777777778rem;
+  height: 2.2777777778rem;
+  background: url(../foto/sprites.png) -7.3333333333rem rem -10px;
   opacity: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -536,12 +538,12 @@ img {
 }
 @media screen and (max-width: 768px) {
   .section {
-    font-size: 20px;
+    font-size: rem 20px;
   }
 }
 @media screen and (max-width: 480px) {
   .section {
-    font-size: 16px;
+    font-size: rem 16px;
   }
 }
 .section--font-color--wait {
@@ -717,6 +719,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding: 0 2.5rem 1.8888888889rem;
   }
 }
 
@@ -728,6 +731,8 @@ img {
   .reviews__avatar {
     width: 7.2222222222rem;
     height: 7.2222222222rem;
+    margin-bottom: 50px;
+    margin-top: 54px;
   }
 }
 
@@ -749,6 +754,11 @@ img {
           flex: 1;
   margin-left: 1.1111111111rem;
 }
+@media screen and (max-width: 768px) {
+  .reviews__content {
+    margin-left: 0rem;
+  }
+}
 
 .reviews__title {
   font-size: 1.6666666667rem;
@@ -760,11 +770,27 @@ img {
 .reviews__text {
   margin-bottom: 2rem;
 }
+@media screen and (max-width: 768px) {
+  .reviews__text {
+    margin-bottom: 1rem;
+  }
+}
 
 .reviews__autor {
   font-size: 1rem;
   font-weight: bold;
   color: black;
+}
+
+@media screen and (max-width: 768px) {
+  .section__title__reviews {
+    margin-bottom: rem 33px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 768px) {
+  .section__title__reviews {
+    margin-bottom: 0.8333333333rem;
+  }
 }
 
 .interective-avatar {
@@ -892,8 +918,8 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 1.3888888889rem;
-  margin-bottom: 2.4444444444rem;
+  margin-top: -0.611111rem;
+  margin-bottom: 1.444444rem;
 }
 @media screen and (max-width: 480px) {
   .form__controls {
@@ -925,8 +951,15 @@ img {
 @media screen and (max-width: 768px) {
   .oreder-section {
     background-position: center;
+    height: 135vh;
   }
 }
+@media screen and (max-width: 480px) {
+  .oreder-section {
+    height: 135vh;
+  }
+}
+
 .radio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1030,4 +1063,372 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.catalog__item__service {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+@media screen and (max-width: 768px) {
+  .catalog__item__service {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.catalog__img-elem {
+  position: absolute;
+  top: -18%;
+}
+
+.arrows {
+  margin-bottom: 0.2777777778rem;
+}
+
+.catalog__content {
+  width: 20.7777777778rem;
+  height: 18.2777777778rem;
+}
+@media screen and (max-width: 768px) {
+  .catalog__content {
+    padding: 21px 55px;
+    width: auto;
+    height: auto;
+  }
+}
+
+.catalog__desc {
+  margin-bottom: 1.3333333333rem;
+}
+
+.characteristic {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1.3333333333rem;
+}
+@media screen and (max-width: 768px) {
+  .characteristic {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+.characteristic_option {
+  color: black;
+  font-weight: bold;
+}
+
+.catalog__title {
+  font-size: 2rem;
+  color: black;
+  font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .catalog__title {
+    text-align: center;
+  }
+}
+
+.price_botton__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 3.3333333333rem;
+  width: 20.6111111111rem;
+}
+@media screen and (max-width: 768px) {
+  .price_botton__price {
+    width: auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+.price_botton__price__coll {
+  font-size: 3.3333333333rem;
+  color: black;
+}
+
+.btn--theme--price {
+  height: 3.3333333333rem;
+  width: 8.6666666667rem;
+}
+
+.price_botton__price__coll {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.options {
+  width: 5.0555555556rem;
+  height: 5.0555555556rem;
+  background: #3A587E;
+  border-radius: 10%;
+}
+
+.slide__button {
+  height: 2.2222222222rem;
+  width: 1.3333333333rem;
+  background-color: transparent;
+  border-color: transparent;
+  top: 42%;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.slide_cp {
+  top: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .slide_cp {
+    top: 25%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .catalog-priсe {
+    height: 135vh;
+  }
+}
+
+body, html {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.menu__link--burger {
+  color: white;
+  text-decoration: none;
+}
+
+.menu__item--burger {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu__list--burger {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.burger {
+  position: fixed;
+  top: 20px;
+  right: 10%;
+  height: 25px;
+  width: 40px;
+  cursor: pointer;
+  z-index: 15;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+.burger__line {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.burger__line:nth-child(2) {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.burger__line:nth-child(3) {
+  bottom: 0;
+  top: initial;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  background-color: #24243B;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  text-align: center;
+  line-height: 1.9444444444rem;
+}
+
+.menu_burger__item {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.menu_burger__item:after {
+  content: "";
+  display: inline-block;
+  height: 5px;
+  width: 5px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+.menu_burger__item:last-child {
+  margin-bottom: 0;
+}
+.menu_burger__item:last-child:after {
+  display: none;
+}
+.menu_burger__link:hover {
+  opacity: 0.7;
+}
+
+.burger--active .burger__line:nth-child(1) {
+  opacity: 0;
+}
+.burger--active .burger__line:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.burger--active .burger__line:nth-child(3) {
+  -webkit-transform: rotate(-45deg) translateY(-8px) translateX(5px);
+          transform: rotate(-45deg) translateY(-8px) translateX(5px);
+}
+
+.overlay--active {
+  left: 0;
+  opacity: 1;
+}
+
+.body--active-menu {
+  overflow: hidden;
+}
+
+.options {
+  position: absolute;
+  cursor: pointer;
+  margin-bottom: 2.8888888889rem;
+  margin-top: -15%;
+  padding: 0.8333333333rem 0.2777777778rem;
+  color: white;
+  text-align: -webkit-center;
+}
+@media screen and (max-width: 768px) {
+  .options {
+    display: none;
+  }
+}
+.options:hover {
+  background-color: rgb(23, 8, 192);
+}
+.options:hover .parametrs {
+  background-color: #FFFFFF;
+  color: black;
+  height: 16.1666666667rem;
+  width: 15.1666666667rem;
+  position: absolute;
+  top: 0%;
+  left: 100%;
+  border-radius: 2%;
+  visibility: visible;
+}
+.options:hover:before {
+  content: attr(parametrs);
+  color: aqua;
+}
+.options .span.options {
+  position: absolute;
+}
+.options .parametrs {
+  background-color: black;
+  height: 16.1666666667rem;
+  width: 15.1666666667rem;
+  position: absolute;
+  top: 0%;
+  left: 100%;
+  border-radius: 2%;
+  visibility: hidden;
+}
+.options .parametrs:hover {
+  content: "";
+  visibility: visible;
+  z-index: 10;
+}
+.options .parametrs__option {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.7222222222rem 0.3888888889rem;
+}
+.options .parametrs::after {
+  content: "";
+  visibility: visible;
+  z-index: 10;
+}
+.options .options:hover.parametrs {
+  visibility: visible;
+  opacity: 1;
 }
