--- a/components/_catalog.scss
+++ b/components/_catalog.scss
@@ -1,11 +1,7 @@
 .catalog__item__service {
     display: flex;
     justify-content: space-around;
-    @include tablets{
-        flex-direction: column;    
-    align-items: center;
-}
- 
+
 }
 
 .catalog__img-elem{
@@ -13,36 +9,31 @@ position: absolute;
 top: -18%;
 }
 
-
+.options{
+    margin-bottom: 52px;
+    margin-top: -15%;
+    padding: 15px 5px;
+    color: white;
+    text-align: -webkit-center;
+}
 
 .arrows {
-    margin-bottom: rem(5px);
+    margin-bottom: 5px;
 }
 
 .catalog__content{
-width: rem(374px);
-height: rem(329px);
-@include tablets{
-    padding: 21px 55px;
-    width: auto;
-height: auto;
-}
-    
-
+width: 374px;
+height: 329px;
 }
 
 .catalog__desc{
-    margin-bottom: rem(24px);
+    margin-bottom: 24px;
 }
 
 .characteristic {
     justify-content: space-between;
     display: flex;
-    margin-bottom: rem(24px); 
-    @include tablets{
-        justify-content: space-around;
-        ;
-    }
+    margin-bottom: 24px;
 }
 
 .characteristic_option{
@@ -51,35 +42,27 @@ height: auto;
 }
 
 .catalog__title {
-    font-size: rem(36px);
+    font-size: 36px;
     color: black;
     font-weight: bold;
-    @include tablets{
-        text-align: center;
-    }
-}   
+}
 
 .price_botton__price {
     display: flex;
     justify-content: space-between;
-    height: rem(60px);
-    width: rem(371px);
-    @include tablets{
-        width: auto;
-        justify-content: space-around;
-
-        }
+    height: 60px;
+    width: 371px;
 
 }
 
 .price_botton__price__coll {
-    font-size: rem(60px);
+    font-size: 60px;
     color: black;
 }
 
 .btn--theme--price {
-    height: rem(60px);
-    width: rem(156px);
+    height: 60px;
+    width: 156px;
 }
 
 .price_botton__price__coll{
@@ -87,15 +70,15 @@ height: auto;
 }
 
 .options{
-    width: rem(91px);
-    height: rem(91px);
+    width: 91px;
+    height: 91px;
     background: #3A587E;
     border-radius: 10%
 }
 
 .slide__button{
-    height: rem(40px);
-    width: rem(24px);
+    height: 40px;
+    width: 24px;
     background-color: transparent;
     border-color: transparent;
     
@@ -112,13 +95,4 @@ height: auto;
     justify-content: space-between;
     position: absolute;
     width: 100%;
-    @include tablets{
-        top: 25%;
-    }
-}
-
-.catalog-priсe {
-    @include tablets{
-        height: 135vh;
-    }
 }
