--- a/components/_section.scss
+++ b/components/_section.scss
@@ -5,10 +5,10 @@
     flex-direction: column;
     justify-content: center;
     @include tablets {
-        font-size: rem (20px);
+        font-size: 20px;
     }
     @include phones {
-        font-size: rem (16px);
+        font-size: 16px;
     }
 
 
