--- a/stayl/main.scss
+++ b/stayl/main.scss
@@ -42,3 +42,5 @@ $z-fixed-menu: 100;
 @import "../components/radio";
 @import "../components/fixed-menu";
 @import "../components/catalog";
+@import "../components/burger";
+@import "../components/options";
