--- a/components/_catalog.scss
+++ b/components/_catalog.scss
@@ -1,7 +1,11 @@
 .catalog__item__service {
     display: flex;
     justify-content: space-around;
-
+    @include tablets{
+        flex-direction: column;    
+    align-items: center;
+}
+ 
 }
 
 .catalog__img-elem{
@@ -9,31 +13,36 @@ position: absolute;
 top: -18%;
 }
 
-.options{
-    margin-bottom: 52px;
-    margin-top: -15%;
-    padding: 15px 5px;
-    color: white;
-    text-align: -webkit-center;
-}
+
 
 .arrows {
-    margin-bottom: 5px;
+    margin-bottom: rem(5px);
 }
 
 .catalog__content{
-width: 374px;
-height: 329px;
+width: rem(374px);
+height: rem(329px);
+@include tablets{
+    padding: 21px 55px;
+    width: auto;
+height: auto;
+}
+    
+
 }
 
 .catalog__desc{
-    margin-bottom: 24px;
+    margin-bottom: rem(24px);
 }
 
 .characteristic {
     justify-content: space-between;
     display: flex;
-    margin-bottom: 24px;
+    margin-bottom: rem(24px); 
+    @include tablets{
+        justify-content: space-around;
+        ;
+    }
 }
 
 .characteristic_option{
@@ -42,27 +51,35 @@ height: 329px;
 }
 
 .catalog__title {
-    font-size: 36px;
+    font-size: rem(36px);
     color: black;
     font-weight: bold;
-}
+    @include tablets{
+        text-align: center;
+    }
+}   
 
 .price_botton__price {
     display: flex;
     justify-content: space-between;
-    height: 60px;
-    width: 371px;
+    height: rem(60px);
+    width: rem(371px);
+    @include tablets{
+        width: auto;
+        justify-content: space-around;
+
+        }
 
 }
 
 .price_botton__price__coll {
-    font-size: 60px;
+    font-size: rem(60px);
     color: black;
 }
 
 .btn--theme--price {
-    height: 60px;
-    width: 156px;
+    height: rem(60px);
+    width: rem(156px);
 }
 
 .price_botton__price__coll{
@@ -70,15 +87,15 @@ height: 329px;
 }
 
 .options{
-    width: 91px;
-    height: 91px;
+    width: rem(91px);
+    height: rem(91px);
     background: #3A587E;
     border-radius: 10%
 }
 
 .slide__button{
-    height: 40px;
-    width: 24px;
+    height: rem(40px);
+    width: rem(24px);
     background-color: transparent;
     border-color: transparent;
     
@@ -89,10 +106,19 @@ height: 329px;
     justify-content: space-between;
 
 }
-.slide_cp{  
+.slide__cp{  
     top: 50%;
     display: flex;
     justify-content: space-between;
     position: absolute;
     width: 100%;
+    @include tablets{
+        top: 25%;
+    }
+}
+
+.catalog-priсe {
+    @include tablets{
+        height: 135vh;
+    }
 }
