--- a/stayl/main.css
+++ b/stayl/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,300&display=swap");
 .hamburger {
@@ -731,8 +730,6 @@ img {
   .reviews__avatar {
     width: 7.2222222222rem;
     height: 7.2222222222rem;
-    margin-bottom: 50px;
-    margin-top: 54px;
   }
 }
 
@@ -754,11 +751,6 @@ img {
           flex: 1;
   margin-left: 1.1111111111rem;
 }
-@media screen and (max-width: 768px) {
-  .reviews__content {
-    margin-left: 0rem;
-  }
-}
 
 .reviews__title {
   font-size: 1.6666666667rem;
@@ -770,11 +762,6 @@ img {
 .reviews__text {
   margin-bottom: 2rem;
 }
-@media screen and (max-width: 768px) {
-  .reviews__text {
-    margin-bottom: 1rem;
-  }
-}
 
 .reviews__autor {
   font-size: 1rem;
@@ -785,11 +772,6 @@ img {
 @media screen and (max-width: 768px) {
   .section__title__reviews {
     margin-bottom: rem 33px;
-  }
-}
-@media screen and (max-width: 768px) and (max-width: 768px) {
-  .section__title__reviews {
-    margin-bottom: 0.8333333333rem;
   }
 }
 
@@ -1072,17 +1054,6 @@ img {
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
-@media screen and (max-width: 768px) {
-  .catalog__item__service {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
 
 .catalog__img-elem {
   position: absolute;
@@ -1096,13 +1067,6 @@ img {
 .catalog__content {
   width: 20.7777777778rem;
   height: 18.2777777778rem;
-}
-@media screen and (max-width: 768px) {
-  .catalog__content {
-    padding: 21px 55px;
-    width: auto;
-    height: auto;
-  }
 }
 
 .catalog__desc {
@@ -1118,12 +1082,6 @@ img {
   display: flex;
   margin-bottom: 1.3333333333rem;
 }
-@media screen and (max-width: 768px) {
-  .characteristic {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-}
 
 .characteristic_option {
   color: black;
@@ -1135,11 +1093,6 @@ img {
   color: black;
   font-weight: bold;
 }
-@media screen and (max-width: 768px) {
-  .catalog__title {
-    text-align: center;
-  }
-}
 
 .price_botton__price {
   display: -webkit-box;
@@ -1150,13 +1103,6 @@ img {
           justify-content: space-between;
   height: 3.3333333333rem;
   width: 20.6111111111rem;
-}
-@media screen and (max-width: 768px) {
-  .price_botton__price {
-    width: auto;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
 }
 
 .price_botton__price__coll {
@@ -1200,7 +1146,7 @@ img {
           justify-content: space-between;
 }
 
-.slide__cp {
+.slide_cp {
   top: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1210,17 +1156,6 @@ img {
           justify-content: space-between;
   position: absolute;
   width: 100%;
-}
-@media screen and (max-width: 768px) {
-  .slide__cp {
-    top: 25%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .catalog-priсe {
-    height: 135vh;
-  }
 }
 
 body, html {
@@ -1385,8 +1320,8 @@ body, html {
 .options:hover .parametrs {
   background-color: #FFFFFF;
   color: black;
-  height: 16.1666666667rem;
-  width: 15.1666666667rem;
+  height: 291px;
+  width: 273px;
   position: absolute;
   top: 0%;
   left: 100%;
@@ -1402,8 +1337,8 @@ body, html {
 }
 .options .parametrs {
   background-color: black;
-  height: 16.1666666667rem;
-  width: 15.1666666667rem;
+  height: 291px;
+  width: 273px;
   position: absolute;
   top: 0%;
   left: 100%;
@@ -1421,7 +1356,7 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0.7222222222rem 0.3888888889rem;
+  padding: 13px 7px;
 }
 .options .parametrs::after {
   content: "";
