--- a/components/_catalog.scss
+++ b/components/_catalog.scss
@@ -1,11 +1,7 @@
 .catalog__item__service {
     display: flex;
     justify-content: space-around;
-    @include tablets{
-        flex-direction: column;    
-    align-items: center;
-}
- 
+
 }
 
 .catalog__img-elem{
@@ -22,13 +18,6 @@ top: -18%;
 .catalog__content{
 width: rem(374px);
 height: rem(329px);
-@include tablets{
-    padding: 21px 55px;
-    width: auto;
-height: auto;
-}
-    
-
 }
 
 .catalog__desc{
@@ -38,11 +27,7 @@ height: auto;
 .characteristic {
     justify-content: space-between;
     display: flex;
-    margin-bottom: rem(24px); 
-    @include tablets{
-        justify-content: space-around;
-        ;
-    }
+    margin-bottom: rem(24px);
 }
 
 .characteristic_option{
@@ -54,21 +39,13 @@ height: auto;
     font-size: rem(36px);
     color: black;
     font-weight: bold;
-    @include tablets{
-        text-align: center;
-    }
-}   
+}
 
 .price_botton__price {
     display: flex;
     justify-content: space-between;
     height: rem(60px);
     width: rem(371px);
-    @include tablets{
-        width: auto;
-        justify-content: space-around;
-
-        }
 
 }
 
@@ -106,19 +83,10 @@ height: auto;
     justify-content: space-between;
 
 }
-.slide__cp{  
+.slide_cp{  
     top: 50%;
     display: flex;
     justify-content: space-between;
     position: absolute;
     width: 100%;
-    @include tablets{
-        top: 25%;
-    }
-}
-
-.catalog-priсe {
-    @include tablets{
-        height: 135vh;
-    }
 }
